# remote-machine

./: .gitignore  ACTIONS_API.md  LICENSE  README.md  RESULT_TYPES.md  ideas.md  pyproject.toml
remote_machine/: __init__.py  core.py  types.py
remote_machine/actions/: __init__.py  cron.py  device.py  docker.py  env.py  firewall.py  fs.py  git.py  http.py  net.py  onie.py  proxy.py  ps.py  python.py  pythonenv.py  service.py  sys.py
remote_machine/errors/: __init__.py  error_mapper.py  exceptions.py
remote_machine/models/: __init__.py  capabilities.py  command_result.py  common_types.py  cron_types.py  device_types.py  docker_types.py  env_types.py  filesystem_types.py  firewall_types.py  git_types.py  http_types.py  network_types.py  process_types.py  proxy_types.py  python_types.py  remote_state.py  scp_types.py  service_types.py  system_types.py
remote_machine/protocols/: __init__.py  http.py  scp.py  ssh.py
remote_machine/utils/: __init__.py  decorators.py  error_mapper.py  fs_utils.py  path_resolver.py
tests/: conftest.py  test_core.py  test_device_actions.py  test_docker_actions.py  test_errors.py  test_git_actions.py  test_linux_parsers_integration.py  test_net_actions.py  test_ps_actions.py  test_sys_actions.py
